--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <main>
-        <section>
-            <div class="result"></div>
-        </section>
-        <section>
-            <div class="button-container">
-                <button class="button" hidden></button>
-            </div>
-            <aside>Aside history content</aside>            
-        </section>   
+        <div class="main-container">
+            <section class="result-section">
+                <div class="result"></div>
+            </section>
+            <section class="sign-section">
+                <div class="button-container">
+                </div>            
+            </section>   
+        </div>
+        <aside>Aside history content</aside>
     </main>
     <script src="main.js"></script>
 </body>
