Changed ui appearance, added math-operations

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <main>
         <div class="main-container">
-            <section class="result-section">
-                <div class="result"></div>
+            <section class="screen-section">
+                <div class="screen"></div>
             </section>
             <section class="sign-section">
                 <div class="button-container">
@@ -20,5 +20,6 @@
         <aside>Aside history content</aside>
     </main>
     <script src="main.js"></script>
+    <script src="math-operations.js"></script>
 </body>
 </html>
