Changed ui design

--- a/index.html
+++ b/index.html
@@ -8,21 +8,18 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
-    <main>
-        <div class="main-container">
-            <section class="screen-section">
+<body class="container">
+        <header></header>
+        <main class="container">
+            <section class="calculator container">
                 <div class="screen"></div>
-            </section>
-            <section class="sign-section">
-                <div class="button-container">
+                <div class="button-block container">
                 </div>
             </section>
-        </div>
-        <aside>Aside history content</aside>
-    </main>
+            <section class="history"></section>
+        </main>
+        <footer></footer>
     <script src="main.js"></script>
     <script src="math-operations.js"></script>
 </body>
-
 </html>
